implement material ui button

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -36,3 +36,25 @@
 .link-active-style {
   color: darkorange;
 }
+
+.button-style {
+  padding: 5px;
+  width: 200px;
+  color: #09d3ac;
+  background: #565656;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.button-style:disabled {
+  background: #dddddd;
+}
+
+.button-style-applied {
+  padding: 5px;
+  width: 200px;
+  color: darkorange;
+  background: #565656;
+  font-size: 20px;
+  cursor: pointer;
+}
